--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                <source>11</source>  <!-- Java version to compile -->
+                <target>11</target>  <!-- Java version for generated class files -->
+            </configuration>
             </plugin>
         </plugins>
     </build>
